# pyhwloc

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  hatch_build_hook.py  pyproject.toml
.github/workflows/: main.yml  wheel.yml
cmake/: Findhwloc.cmake
dev/: Dockerfile  Dockerfile.cpu  build_doc_xml.sh  build_wheel.sh  check_plugins.py  install_doxygen.sh  install_hwloc.sh  pyhwloc_dev.yml  pyhwloc_ext_dev.yml  pyhwloc_win_dev.yml
docs/: low_level.org
docs/source/: .gitignore  build.rst  c.rst  conf.py  core.rst  dev.rst  index.rst  intro.rst  low_level.rst  pyhwloc_api.rst
examples/: README.rst  distance.py  gds_hops.py  intro-low-level.py  intro.py  intro_low_level.py  list_gpus.py  membind.py
hatch/: hook.py
hatch_build/: backend.py  hook.py
pyhwloc/: __init__.py  bitmap.py  core.py  cudadr.py  cudart.py  distance.py  hwobject.py  lib.py  linux.py  nvml.py  sched.py  topology.py  utils.py  windows.py
pyhwloc/hwloc/: __init__.py  bitmap.py  core.py  cudadr.py  cudart.py  lib.py  libc.py  linux.py  nvml.py  sched.py  windows.py
pyhwloc/pyhwloc/: bitmap.py
pyhwloc/pyhwloc/hwloc/: core.py  cudart.py  libc.py  windows.py
pyhwloc/tests/: test_bind.py  test_bitmap.py  test_core.py  test_cpubind.py  test_cudadr.py  test_cudart.py  test_distance.py  test_distances.py  test_examples.py  test_hwobject.py  test_linux.py  test_memattrs.py  test_membind.py  test_nvml.py  test_sched.py  test_shmem.py  test_topology.py  test_utils.py  test_windows.py  utils.py
pyhwloc/tests/test_hwloc/: test_core.py  test_cpubind.py  test_cudadr.py  test_cudart.py  test_distances.py  test_memattrs.py  test_membind.py  test_nvml.py  test_shmem.py  utils.py
src/: cudart.c  cudart.cc  cudr.c  cudr.cc  hatch_build_hook.py  nvml.c  nvml.cc  pyhwloc.c  pyhwloc.cc
src/ext/: .gitignore  cudart.c  cudr.c  nvml.c  pyhwloc.c
src/pyhwloc/: __init__.py  bitmap.py  cpukinds.py  cuda_driver.py  cuda_runtime.py  distance.py  distances.py  hwobject.py  memattrs.py  nvml.py  topology.py  utils.py
src/pyhwloc/hwloc/: __init__.py  bitmap.py  core.py  cudadr.py  cudart.py  lib.py  libc.py  linux.py  nvml.py  sched.py  windows.py
tests/: sample_numa.xml  sample_osdev.xml  test_bitmap.py  test_cpubind.py  test_cpukinds.py  test_cuda_driver.py  test_cuda_runtime.py  test_distance.py  test_examples.py  test_hwobject.py  test_memattrs.py  test_membind.py  test_nvml.py  test_topology.py  test_utils.py
tests/test_hwloc/: test_bitmap.py  test_core.py  test_cpubind.py  test_cudadr.py  test_cudart.py  test_distances.py  test_linux.py  test_memattrs.py  test_membind.py  test_nvml.py  test_sched.py  test_windows.py  utils.py
