[build-system]
requires = ["setuptools >= 69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhwloc"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
    { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
]
maintainers = [
    { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
]

[tool.setuptools.dynamic]
version = { attr = "pyhwloc.__version__" }

[tool.setuptools]
packages = ["pyhwloc"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "silent"

[tool.isort]
profile = "black"