[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[project]
name = "pyhwloc"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
    { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
]
maintainers = [
    { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
]
description = "Python interface of the hwloc library."
license = { text = "Apache-2.0" }

[tool.hatch.version]
path = "pyhwloc/hwloc/__init__.py"

[tool.hatch.build.targets.wheel.force-include]
"pyhwloc/_lib" = "pyhwloc/_lib"

[tool.hatch.build.targets.wheel.shared-data]
"pyhwloc/_lib" = "pyhwloc/_lib"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build_hook.py"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
follow_imports = "silent"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
