[build-system]
requires = [
    "hatchling",
    "packaging"
]
backend-path = ["."]
build-backend="hatch_build.backend"

[project]
name = "pyhwloc"
dynamic = ["version"]
requires-python = ">=3.12"
authors = [
    { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
]
maintainers = [
    { name = "Jiaming Yuan", email = "jm.yuan@outlook.com" }
]
description = "Python interface of the hwloc library."
license = { text = "BSD-3-Clause" }
readme = "README.rst"
classifiers=[
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
source = "https://github.com/trivialfis/pyhwloc"

[tool.hatch.version]
path = "src/pyhwloc/hwloc/__init__.py"

[tool.hatch.build.targets.wheel.force-include]
"src/pyhwloc/_lib" = "pyhwloc/_lib"

[tool.hatch.build.targets.wheel.shared-data]
"src/pyhwloc/_lib" = "pyhwloc/_lib"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build/hook.py"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
